--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>fa.trainning</groupId>
+	<groupId>fa.training</groupId>
 	<artifactId>TheGioiDiDong-Nhom7</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
