--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port= 8089
-app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
+app.jwt.secret=Nhom 7
+<!-- abcdefghijklmnOPQRSTUVWXYZ -->
