--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/tgdd
 spring.datasource.username= root
-spring.datasource.password=123456
+spring.datasource.password= quocdung
 spring.jpa.show-sql= true
-<!-- spring.jpa.ddl-auto = create -->
+spring.jpa.ddl-auto = create
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port= 8089
-app.jwt.secret=Nhom7
-<!-- abcdefghijklmnOPQRSTUVWXYZ -->
