--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,8 @@ spring.datasource.url= jdbc:mysql://localhost:3306/tgdd
 spring.datasource.username= root
 spring.datasource.password=quocdung
 spring.jpa.show-sql= true
-<!-- spring.jpa.ddl-auto = create -->
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port= 8089
 app.jwt.secret=Nhom7
