--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/tgdd
 spring.datasource.username= root
-spring.datasource.password=quocdung
+spring.datasource.password=123456
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
